[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Todot/Src/Card/CardButton.gd" type="Script" id=1]
[ext_resource path="res://addons/Todot/Assets/Edit.svg" type="Texture" id=2]
[ext_resource path="res://addons/Todot/Assets/EditHover.svg" type="Texture" id=3]

[node name="CardButton" type="Button" groups=["Card"]]
margin_right = 12.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HBox"]
unique_name_in_owner = true
margin_top = 5.0
margin_right = 1.0
margin_bottom = 19.0
size_flags_horizontal = 3
autowrap = true

[node name="Centrify" type="CenterContainer" parent="HBox"]
margin_left = 5.0
margin_right = 29.0
margin_bottom = 24.0

[node name="EditButton" type="TextureButton" parent="HBox/Centrify"]
unique_name_in_owner = true
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[connection signal="resized" from="HBox/Title" to="." method="fix_size"]
[connection signal="pressed" from="HBox/Centrify/EditButton" to="." method="_on_EditButton_pressed"]
